[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfniml"
version = "0.0.1"
authors = [
  { name="Constantin von Crailsheim", email="C.Crailsheim@campus.lmu.de" },
  { name="David Rundel", email="david.rundel@campus.lmu.de" },
  { name="Julius Kobialka", email="J.Kobialka@campus.lmu.de" }
]
description = "Interpretable Machine Learning for TabPFN"
readme = "README.md"
requires-python = ">=3.8"
dependencies=[
        'torch>=1.9.0',
        'scikit-learn>=0.24.2',
        'numpy>=1.21.2',
        'dcurves>=1.0.6.2',
        'mapie>=0.6.5', 
        'shap>=0.41.0',
        'pandas>=1.5.3',
        'lightgbm>=4.0.0',
        'seaborn>=0.12.2',
        'gower>=0.1.2',
        'pymoo>=0.6.0.1',
        'typing>=3.7.4.3',
        'tabpfn==0.1.8',
        'netcal>=1.3.5',
        'statsmodels>=0.13.5',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/david-rundel/tabpfn_iml"
